# stream

./: .gitignore  .pre-commit-config.yaml  README.rst  conftest.py  pyproject.toml  tox.ini
.github/workflows/: codeql-analysis.yml
src/stream/: __init__.py  _typing.py  base.py  common.py  conftest.py  core.py  plural.py  setup_package.py
src/stream/clean/: __init__.py  base.py  lof.py
src/stream/clean/builtin/: __init__.py  lof.py
src/stream/frame/: __init__.py  fit.py  interop.py  result.py
src/stream/io/: __init__.py  core.py  normalize.py  register.py
src/stream/io/builtin/: table.py
src/stream/stream/: __init__.py  base.py  core.py  plural.py  stream.py
src/stream/utils/: coord_utils.py
src/stream/utils/descriptors/: attribute.py  base.py  bound.py  cache.py
